--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://snabbwall.org/"
+baseurl = "http://snabbwall.igalia.com/"
 languageCode = "en-us"
 title = "SnabbWall"
 PygmentsCodeFences = true
